--- a/d-day.html
+++ b/d-day.html
@@ -125,7 +125,7 @@
             </div>
             <div class="item">
                 <video controls id="media">
-                    <source src="media/dia-d-apresentação-alt-2.mp4" type="video/mp4">
+                    <source src="media/dia-d-apresentação-alt-2.webm" type="video/mp4">
                 </video>
             </div>
             <div class="item">
