--- a/d-day.html
+++ b/d-day.html
@@ -125,12 +125,12 @@
             </div>
             <div class="item">
                 <video controls id="media">
-                    <source src="media/dia-d-apresentação-alt-2.webm" type="video/mp4">
+                    <source src="media/dia-d-apresentação-alt-2.webm" type="video/webm">
                 </video>
             </div>
             <div class="item">
                 <video controls id="media">
-                    <source src="media/dia-d-apresentação-alt-3.mp4" type="video/mp4">
+                    <source src="media/dia-d-apresentação-alt-3.webm" type="video/webm">
                 </video>
             </div>
             <div class="item">
